Fixes to: whiteboard drawing area, control bar css, collapse button

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 
 .main-content {
   display: flex;
-  width: calc(100vw - 150px);
   height: 100%;
+  width: 100%;
   overflow: hidden;
 }
